# patternengine-demo

./: README.md  pyproject.toml
src/patternengine_demo/: app.py  demo.py  framework.py  title.py
